# libgrp

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  ksgrp.cxx  ksgrp.hxx
source/test/: CMakeLists.txt  test.cxx  test.grp
